RESOLVED FIXED272544
Fix assertion in BrowsingContextGroup::ensureProcessForConnection when a process has no connection
https://bugs.webkit.org/show_bug.cgi?id=272544
Summary Fix assertion in BrowsingContextGroup::ensureProcessForConnection when a proc...
Alex Christensen
Reported 2024-04-11 12:33:29 PDT
...
Attachments
Radar WebKit Bug Importer
Comment 1 2024-04-11 12:33:41 PDT
Alex Christensen
Comment 2 2024-04-11 12:35:01 PDT
EWS
Comment 3 2024-04-11 17:26:23 PDT
Committed 277405@main (7b4d6711a9c2): <https://commits.webkit.org/277405@main> Reviewed commits have been landed. Closing PR #27156 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.