Fix assertion in BrowsingContextGroup::ensureProcessForConnection when a process has no connection https://bugs.webkit.org/show_bug.cgi?id=272544 rdar://126292814

Reviewed by Charlie Wolfe.

If we have a process without a connection, AuxiliaryProcessProxy::connection asserts when called.
This is what AuxiliaryProcessProxy::hasConnection is for.

* LayoutTests/platform/mac-site-isolation/TestExpectations:
* Source/WebKit/UIProcess/BrowsingContextGroup.cpp:
(WebKit::BrowsingContextGroup::ensureProcessForConnection):

Canonical link: https://commits.webkit.org/277405@main